# vault

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs  release.toml
.sqlx/: query-2b9ed01ebb57ca1c0c2f75f12a70d3d1f8c9f8cd3678708cf62d05073d6e269e.json  query-53c030b18157e4f589a6cf47173ef94d597a771c1d4db25a0210a18d9bbca2d4.json  query-6af74b9abde7aeefb101ce9e511346313a545d3eaae488d154ae7d1d2a6cb0f3.json  query-d94e553bd8dd05a7c3def7c40be5b479c28e18636587bc197e2e45873ed70ec9.json  query-f2fa54ad6d37c2094cf20499d52f2dc5a257851d528b586f52e543af4f0962b6.json  query-f6a91620266aabc0b2ced94f26dce4d183dc4e2c4cb91f7a9e07814d57b42f57.json
hooks/: post_checkout
migrations/: 20241102003236_setup.sql  20241102174821_cooldown.sql
src/: main.rs  store.rs
src/handlers/: get.rs  mod.rs  remove.rs  store.rs
