[package]
name = "vault"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
async-nats = "0.37.0"
bytes = "1.8.0"
chrono = { version = "0.4.38" }
protobuf = "3.7.1"
tokio = {version="1.41.0", features = ["full"]}
futures = "0.3.31"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "migrate", "postgres", "uuid", "chrono"] }
tracing = "0.1.40"
tracing-subscriber = {  version = "0.3.18", features = ["env-filter"] }

[build-dependencies]
protobuf-codegen = "3.7.1"
walkdir = "2.5.0"
